css/style.css
/* CSS reset */
html {
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
}

*,
*::before,
*::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
}

body {
   background-color: rgba(248, 202, 143, 0.589);
}

a {
   display: inline-block;
   padding: 8px;
   font-size: 18px;
}

ul, ol {
   padding-left: 18px;
}

.main-container {
   width: 800px;
   margin: 30px auto;
   margin-bottom: 60px;
   text-align: justify;
}

.text-center {
   text-align: center;
}

.main-container * {
   margin: 10px 0;
}

.main-container h2 {
   margin: 20px 0;
}

#links-list {
   list-style: none;
   text-align: left;
   margin: 20px;
   margin-left: 295px;
}

#links-list li {
   margin: 8px 0;
}

